--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,11 @@
             <version>8.0.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>pl.softsystem</groupId>
+            <artifactId>notifications</artifactId>
+            <version>4.1</version>
+        </dependency>
 
     </dependencies>
 
