--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,3 +7,13 @@ spring:
 
 oauth:
   baseUrl: https://intranet3.softsystem.pl/oauth
+
+notifications:
+  prodEnabled: false
+  clientPassword: Kb6q6ccbpc3EsGkmsUi6zuqkV2xyPcWb2hyQHLWjiSqea
+  url: https://intranet3.softsystem.pl/mails-console
+  devRecipients: dsowins@softsystem.pl
+  id:
+    testNotification: 204
+    reservationNotification: 205
+    remindNotification: 206
