--- a/src/main/resources/application-demo.yml
+++ b/src/main/resources/application-demo.yml
@@ -3,17 +3,17 @@ spring:
     url: jdbc:postgresql://intranet3:5432/development?currentSchema=books
     username: books
     password: rJ12pw83T8
-
+    jpa: show-sql=true
 
 oauth:
   baseUrl: https://intranet3.softsystem.pl/oauth
 
-  notifications:
-    prodEnabled: false
-    clientPassword: Kb6q6ccbpc3EsGkmsUi6zuqkV2xyPcWb2hyQHLWjiSqea
-    url: https://intranet3.softsystem.pl/mails-console
-    devRecipients: jchyla@softsystem.pl, lstec@softsystem.pl
-    id:
-      testNotification: 204
-      bookRequestDenied: 205
-      bookReady: 206
+#  notifications:
+#    prodEnabled: false
+#    clientPassword: Kb6q6ccbpc3EsGkmsUi6zuqkV2xyPcWb2hyQHLWjiSqea
+#    url: https://intranet3.softsystem.pl/mails-console
+#    devRecipients: jchyla@softsystem.pl, lstec@softsystem.pl
+#    id:
+#      testNotification: 204
+#      bookRequestDenied: 205
+#      bookReady: 206
